--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ header div{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 1199px;
-    
+    max-width: 1380px;
+    margin: auto;
 }
 
 .img123{
