--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header div{
     height: 500px;
     width: 350px;
     padding: 0px 5px;
+    position: relative;
 }
 
 .info{
@@ -45,5 +46,30 @@ header div{
 
 .sconto{
     color: red;
+}
+
+.img456{
+    height: 500px;
+    width: 350px;
+    padding: 0px 5px;
+    display: none;
+}
+
+.box:hover .img456{
+    display: block;
+  
+}
+
+.box:hover.img123{ 
+    display: none;
+}
+
+footer{
+    height: 70px;
+    background-color: black;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
